css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');


/* RESET RULES */

*{
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: poppins, italic;
}

a{
  text-decoration: none;
  color: currentColor;
}

ul, li{
  list-style: none;
}

/* GENERAL RULES */
.color-aliceblue{
  color: aliceblue;
}

/* CONTAINER CENTERING */
.container{
  margin: 0 auto;
  max-width: 900px;
}

/* NAVBAR LOGO + LOGIN BUTTON */
img.logo{
  display: inline-block;
  max-width: 100px;
}

.btn{
  display: inline-block;
  background-color: aliceblue;
  color: black;
  padding: 0px 20px;
  border-radius: 16px;
  line-height: 30px;
}

/* NAV HEADER */
header{
  /* padding: 10px 150px; */
  background-color: rgba(8, 184, 228, 0.253);
  background-image: url(../img/jumbo.png);
}

/* ----------- MAIN --------------*/
/* 1st SECTION WITH BG AND INTRO */
.container.intro{
  max-width: 700px;
  margin: 0 auto;
}
.hero{
  background-image: url(../img/jumbo.png);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center;
}
.hero.row{
  align-items: center;
  padding-top: 100px;
  width: 800px;
}

.intro.col{
  width: 80%;
  text-align: center;
}
.intro.title{
  text-align: center;
  font-size: 40px;
}
.intro{
  width: 100%;
  margin: 30px 0;
}
.down-arrow{
  margin-right: 10px;
}

.hero .btn{
  line-height: 40px;
  border-radius: 20px;
}
.btn.black-bg{
  background-color: black;
  color: aliceblue;
}

/* ---------------- ALL FLEXBOX HERE ------------------ */
/* NAV FLEXBOX */
.navbar{
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 10px 150px;
}

.menu{
  flex-grow: 1;
  display: flex;
  justify-content: center;
  gap: 50px;
  margin: 0 50px;
}

.login{
  display: flex;
  justify-content: flex-end;
}

/* SECTION FLEX & RULES*/
section{
  padding: 20px 0;
  /* display: flex;
  align-items: center;
  justify-content: center; */
}

/* ROWs FLEXBOX */
.row{
  max-width: 700px;
  flex-wrap: wrap;
  display: flex;
  justify-content: center;
  align-content: center;
  min-height: 100%;
}
.row-ftr{
  display: flex;
  justify-content: space-between;
  align-content: center;
  min-height: 100%;
}

/* DEBUG RULES */
.debug .container{
  height: 500px;
}
.debug .row{
  flex-wrap: nowrap;
}

.debug .layout-1{
  /* height: 500px; */
  width: 450px;
  /* background-color: rgb(252, 5, 149); */
}

.debug .layout-2{
  height: 250px;
  width: 650px;
  background-color: rgb(219, 13, 13);
  border: 1px solid black;
}
.debug .layout-2 .blue{
  background-color: blue;
  flex-grow: 2;
}
.debug .pink{
  background-color: pink;
  flex-grow: 1;
}

.debug.section-3, .debug.section-5{
  background-color: lightgrey;
}

.section-6.debug{
  background-color: black;
}

.debug .layout-3 .pink{
  order: 1;
}
.debug .layout-3{
  height: 250px;
  width: 650px;
  background-color: rgb(219, 13, 13);
  border: 1px solid black;
}
.debug .layout-3 .blue{
  background-color: blue;
  flex-grow: 2;
}
.debug .layout-5{
  /* height: 500px; */
  width: 650px;
  border: 1px solid black;
}

.debug .green{
  background-color: green;
  flex-grow: 1;
}

.debug .layout-6{
  height: 350px;
  width: 650px;
  border: 1px solid black;
}

.debug .two-six{
  background-color: palevioletred;
  width: calc(100%/6* 2);
}
.debug .one-six{
  background-color: aquamarine;
  width: calc(100%/6);
  border: 1px solid grey;
}

.debug .container.ftr{
  width: 650px;
} 
.debug .row.ftr{
  background-color: aquamarine;
  justify-content: space-between;
  padding: 10px 0;
}
.footer-layout.debug{
  background-color: black;
  border-top: 1px solid lightgrey;
}

.debug .col{
  width: 500px;
}

